--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta name="theme-color" content="#ffffff" />
 
   <link rel="stylesheet" href="/src/styles/reset.css">
-  <link href="https://fonts.googleapis.com/css2?family=Istok+Web:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Istok+Web:wght@400;700&family=Montagu+Slab:wght@400;700&display=swap" rel="stylesheet">
   <title>Drunk Cards</title>
 </head>
 
